Fix line spacing gap

--- a/css/core-base.css
+++ b/css/core-base.css
@@ -1,23 +1,5 @@
 /* Changes to Base originate at Core /base/css/base.css */
 
-html, body, div, applet, object, iframe,
-p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, tt, var,
-u, i, center,
-dl, dt, dd, 
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  vertical-align: baseline;
-}
 label {
   margin-right:10px;
 }
@@ -31,7 +13,6 @@ td {
 body {
     /*position: relative;*/
     font-size: 13.5px;
-    line-height: 20px;
     color: #595959;
     -webkit-font-smoothing: antialiased;
 }
